@@ -1,26 +1,33 @@
 package nro.server.engine;
 
+import com.artemis.Component;
+import com.artemis.Entity;
 import com.artemis.World;
 import com.artemis.WorldConfiguration;
 import com.artemis.WorldConfigurationBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.ReentrantLock;
+
 /**
- * Lớp Singleton quản lý vòng đời và truy cập toàn cục tới ECS World.
- * Được cải tiến để linh hoạt hơn trong việc khởi tạo và quản lý hệ thống.
+ * Singleton quản lý ECS World, hỗ trợ virtual threads (JDK 21) và ReentrantLock.
  *
  * @author Arriety
  */
-public class GameWorld implements Runnable {
+public class GameWorld {
 
     private static final Logger log = LoggerFactory.getLogger(GameWorld.class);
 
     private World world;
     private volatile boolean running = false;
-    private Thread gameThread;
-
+    private ExecutorService executor;
+    private int activeEntityCount = 0;
     private final long tickInterval;
+    private final ReentrantLock lock = new ReentrantLock();
 
     private GameWorld() {
         int ticksPerSecond = 60;
@@ -28,33 +35,42 @@ public class GameWorld implements Runnable {
     }
 
     public void initialize(WorldConfigurationBuilder builder) {
-        if (this.world != null) {
-            log.warn("GameWorld has already been initialized.");
-            return;
+        lock.lock();
+        try {
+            if (this.world != null) {
+                log.warn("GameWorld has already been initialized.");
+                return;
+            }
+            WorldConfiguration config = builder.build();
+            this.world = new World(config);
+            log.info("Artemis-odb World initialized successfully.");
+        } finally {
+            lock.unlock();
         }
-        WorldConfiguration config = builder.build();
-        this.world = new World(config);
-        log.info("Artemis-odb World initialized successfully.");
     }
 
     public void start() {
-        if (world == null) {
-            log.error("World is not initialized. Cannot start GameLoop. Please call initialize() first.");
-            return;
-        }
-        if (running) {
-            log.warn("GameLoop is already running.");
-            return;
-        }
+        lock.lock();
+        try {
+            if (world == null) {
+                log.error("World is not initialized. Cannot start GameLoop.");
+                return;
+            }
+            if (running) {
+                log.warn("GameLoop is already running.");
+                return;
+            }
 
-        running = true;
-        gameThread = new Thread(this, "GameWorld-Thread");
-        gameThread.start();
-        log.info("GameLoop started with {} systems.", world.getSystems().size());
+            running = true;
+            executor = Executors.newVirtualThreadPerTaskExecutor();
+            executor.submit(this::runGameLoop);
+            log.info("GameLoop started with {} systems.", world.getSystems().size());
+        } finally {
+            lock.unlock();
+        }
     }
 
-    @Override
-    public void run() {
+    private void runGameLoop() {
         long lastTick = System.currentTimeMillis();
         while (running) {
             try {
@@ -66,7 +82,7 @@ public class GameWorld implements Runnable {
                     world.process();
                     lastTick = now;
                 } else {
-                    Thread.sleep(tickInterval - elapsed);
+                    Thread.sleep(tickInterval - elapsed); // Sleep vẫn OK, virtual thread không block real thread
                 }
             } catch (InterruptedException e) {
                 running = false;
@@ -80,27 +96,85 @@ public class GameWorld implements Runnable {
 
     public void shutdown() {
         running = false;
+        lock.lock();
         try {
-            if (gameThread != null) {
-                gameThread.join(5000);
+            if (executor != null) {
+                executor.shutdown();
+                if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
+                    executor.shutdownNow();
+                }
             }
+            if (world != null) {
+                world.dispose();
+            }
+            log.info("GameWorld has been shut down.");
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            log.error("Interrupted while waiting for game thread to shut down.", e);
+            log.error("Interrupted while shutting down.", e);
+        } finally {
+            lock.unlock();
         }
-        if (world != null) {
-            world.dispose();
-        }
-        log.info("GameWorld has been shut down.");
+    }
+
+    public World getWorld() {
+        return this.world;
     }
 
     /**
-     * Trả về đối tượng World của Artemis để các phần khác của game có thể tương tác.
+     * Tạo entity mới, thêm Component nếu cần.
      *
-     * @return a World object from Artemis-odb
+     * @return Entity ID hoặc -1 nếu lỗi.
      */
-    public World getWorld() {
-        return this.world;
+    public int createEntity() {
+        lock.lock();
+        try {
+            if (world == null) {
+                log.error("World not initialized, cannot create entity.");
+                return -1;
+            }
+            Entity entity = world.createEntity();
+            activeEntityCount++; // Tăng counter
+            log.info("Created entity ID: {}, Active count: {}", entity.getId(), activeEntityCount);
+            return entity.getId();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    /**
+     * Xóa entity và Component liên quan.
+     */
+    public void deleteEntity(int entityId) {
+        lock.lock();
+        try {
+            if (world == null) {
+                log.error("World not initialized, cannot delete entity.");
+                return;
+            }
+            if (world.getEntity(entityId) != null) {
+                world.delete(entityId);
+                activeEntityCount--; // Giảm counter
+                log.info("Deleted entity ID: {}, Active count: {}", entityId, activeEntityCount);
+            } else {
+                log.warn("Entity ID {} not found, cannot delete.", entityId);
+            }
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    public int getEntityCount() {
+        lock.lock();
+        try {
+            if (world == null) {
+                log.error("World not initialized, cannot get entity count.");
+                return 0;
+            }
+            log.info("Current active entities: {}", activeEntityCount);
+            return activeEntityCount;
+        } finally {
+            lock.unlock();
+        }
     }
 
     private static class SingletonHolder {
@@ -110,5 +184,4 @@ public class GameWorld implements Runnable {
     public static GameWorld getInstance() {
         return SingletonHolder.instance;
     }
-
 }
